// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Callback and Voicemail plugin should render correct snapshot for callback 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <style>
      
    table.disable-selection {
      -webkit-touch-callout: none;
      -webkit-user-select: none; 
      -khtml-user-select: none; 
      -moz-user-select: none; 
      -ms-user-select: none; 
      user-select: none;
    }
  
    .disable-selection span::selection{
      background-color: transparent;
    }
    .disable-selection br::selection{
      background-color: transparent;
    }
  
    </style>
    <div>
      <div
        class="css-1i2bp42"
        data-paste-element="FLEX"
      >
        <div
          class="css-roynbj"
          data-paste-element="C_AND_V_CONTENT_BOX"
        >
          <h4
            class="css-yiv179"
            data-paste-element="C_AND_V_CONTENT_HEADING"
          >
            Callback Request
          </h4>
          <span
            class="css-1yyf9zi"
            data-paste-element="TEXT"
          >
            A contact has requested an immediate callback.
          </span>
        </div>
        <div
          class="css-roynbj"
          data-paste-element="C_AND_V_CONTENT_BOX"
        >
          <h4
            class="css-yiv179"
            data-paste-element="C_AND_V_CONTENT_HEADING"
          >
            Contact phone
          </h4>
          <span
            class="css-1yyf9zi"
            data-paste-element="TEXT"
          >
            111
          </span>
        </div>
        <div
          class="css-roynbj"
          data-paste-element="C_AND_V_CONTENT_BOX"
        >
          <h4
            class="css-yiv179"
            data-paste-element="C_AND_V_CONTENT_HEADING"
          >
            Call reception time
          </h4>
          <div
            class="css-4mhva7"
            data-paste-element="FLEX"
          >
            <div
              class="css-1cmiaub"
              data-paste-element="FLEX"
            >
              <div
                class="css-roynbj"
                data-paste-element="BOX"
              >
                1/22/2023, 7:06:18 AM UTC
              </div>
            </div>
            <div
              class="css-j3kwsk"
              data-paste-element="FLEX"
            >
              <div
                class="css-hp8bo2"
                data-paste-element="BOX"
              >
                <span
                  class="css-144s81u"
                  data-paste-element="ICON"
                >
                  <svg
                    aria-hidden="false"
                    aria-labelledby="InformationIcon-3"
                    height="100%"
                    role="img"
                    viewBox="0 0 20 20"
                    width="100%"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <title
                      id="InformationIcon-3"
                    >
                      System time: 1/22/2023, 7:06:18 AM UTC
                    </title>
                    <path
                      d="M10 2a8 8 0 110 16 8 8 0 010-16zm0 1.25a6.75 6.75 0 100 13.5 6.75 6.75 0 000-13.5zM10 9a1 1 0 011 1v3a1 1 0 01-2 0v-3a1 1 0 011-1zm0-3a1 1 0 110 2 1 1 0 010-2z"
                      fill="currentColor"
                      fill-rule="evenodd"
                    />
                  </svg>
                </span>
              </div>
            </div>
          </div>
        </div>
        <div
          class="css-roynbj"
          data-paste-element="C_AND_V_CONTENT_BOX"
        >
          <h4
            class="css-yiv179"
            data-paste-element="C_AND_V_CONTENT_HEADING"
          >
            Callback attempt
          </h4>
          <span
            class="css-1yyf9zi"
            data-paste-element="TEXT"
          >
            1
             of 
            3
          </span>
        </div>
      </div>
      <div
        class="css-roynbj"
        data-paste-element="C_AND_V_BUTTON_BOX"
      >
        <button
          aria-busy="false"
          class="css-1dx7s8z"
          data-paste-element="BUTTON"
          data-testid="callbackBtn"
          type="button"
        >
          <span
            class="css-z6jp9v"
            data-paste-element="BOX"
          >
            Place Call Now To 
            111
          </span>
        </button>
      </div>
      <div
        class="css-roynbj"
        data-paste-element="C_AND_V_BUTTON_BOX"
      >
        <button
          aria-busy="false"
          class="css-1wochzm"
          data-paste-element="BUTTON"
          data-testid="retryBtn"
          type="button"
        >
          <span
            class="css-z6jp9v"
            data-paste-element="BOX"
          >
            Retry Later
          </span>
        </button>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="css-1i2bp42"
      data-paste-element="FLEX"
    >
      <div
        class="css-roynbj"
        data-paste-element="C_AND_V_CONTENT_BOX"
      >
        <h4
          class="css-yiv179"
          data-paste-element="C_AND_V_CONTENT_HEADING"
        >
          Callback Request
        </h4>
        <span
          class="css-1yyf9zi"
          data-paste-element="TEXT"
        >
          A contact has requested an immediate callback.
        </span>
      </div>
      <div
        class="css-roynbj"
        data-paste-element="C_AND_V_CONTENT_BOX"
      >
        <h4
          class="css-yiv179"
          data-paste-element="C_AND_V_CONTENT_HEADING"
        >
          Contact phone
        </h4>
        <span
          class="css-1yyf9zi"
          data-paste-element="TEXT"
        >
          111
        </span>
      </div>
      <div
        class="css-roynbj"
        data-paste-element="C_AND_V_CONTENT_BOX"
      >
        <h4
          class="css-yiv179"
          data-paste-element="C_AND_V_CONTENT_HEADING"
        >
          Call reception time
        </h4>
        <div
          class="css-4mhva7"
          data-paste-element="FLEX"
        >
          <div
            class="css-1cmiaub"
            data-paste-element="FLEX"
          >
            <div
              class="css-roynbj"
              data-paste-element="BOX"
            >
              1/22/2023, 7:06:18 AM UTC
            </div>
          </div>
          <div
            class="css-j3kwsk"
            data-paste-element="FLEX"
          >
            <div
              class="css-hp8bo2"
              data-paste-element="BOX"
            >
              <span
                class="css-144s81u"
                data-paste-element="ICON"
              >
                <svg
                  aria-hidden="false"
                  aria-labelledby="InformationIcon-3"
                  height="100%"
                  role="img"
                  viewBox="0 0 20 20"
                  width="100%"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <title
                    id="InformationIcon-3"
                  >
                    System time: 1/22/2023, 7:06:18 AM UTC
                  </title>
                  <path
                    d="M10 2a8 8 0 110 16 8 8 0 010-16zm0 1.25a6.75 6.75 0 100 13.5 6.75 6.75 0 000-13.5zM10 9a1 1 0 011 1v3a1 1 0 01-2 0v-3a1 1 0 011-1zm0-3a1 1 0 110 2 1 1 0 010-2z"
                    fill="currentColor"
                    fill-rule="evenodd"
                  />
                </svg>
              </span>
            </div>
          </div>
        </div>
      </div>
      <div
        class="css-roynbj"
        data-paste-element="C_AND_V_CONTENT_BOX"
      >
        <h4
          class="css-yiv179"
          data-paste-element="C_AND_V_CONTENT_HEADING"
        >
          Callback attempt
        </h4>
        <span
          class="css-1yyf9zi"
          data-paste-element="TEXT"
        >
          1
           of 
          3
        </span>
      </div>
    </div>
    <div
      class="css-roynbj"
      data-paste-element="C_AND_V_BUTTON_BOX"
    >
      <button
        aria-busy="false"
        class="css-1dx7s8z"
        data-paste-element="BUTTON"
        data-testid="callbackBtn"
        type="button"
      >
        <span
          class="css-z6jp9v"
          data-paste-element="BOX"
        >
          Place Call Now To 
          111
        </span>
      </button>
    </div>
    <div
      class="css-roynbj"
      data-paste-element="C_AND_V_BUTTON_BOX"
    >
      <button
        aria-busy="false"
        class="css-1wochzm"
        data-paste-element="BUTTON"
        data-testid="retryBtn"
        type="button"
      >
        <span
          class="css-z6jp9v"
          data-paste-element="BOX"
        >
          Retry Later
        </span>
      </button>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Callback and Voicemail plugin should render correct snapshot for transcription text 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <style>
      
    table.disable-selection {
      -webkit-touch-callout: none;
      -webkit-user-select: none; 
      -khtml-user-select: none; 
      -moz-user-select: none; 
      -ms-user-select: none; 
      user-select: none;
    }
  
    .disable-selection span::selection{
      background-color: transparent;
    }
    .disable-selection br::selection{
      background-color: transparent;
    }
  
    </style>
    <div>
      <div
        class="css-1i2bp42"
        data-paste-element="FLEX"
      >
        <div
          class="css-roynbj"
          data-paste-element="C_AND_V_CONTENT_BOX"
        >
          <h4
            class="css-yiv179"
            data-paste-element="C_AND_V_CONTENT_HEADING"
          >
            Contact Voicemail
          </h4>
          <span
            class="css-1yyf9zi"
            data-paste-element="TEXT"
          >
            A contact has left a voicemail that requires attention.
          </span>
        </div>
        <div
          class="css-roynbj"
          data-paste-element="C_AND_V_CONTENT_BOX"
        >
          <h4
            class="css-yiv179"
            data-paste-element="C_AND_V_CONTENT_HEADING"
          >
            Voicemail recording
          </h4>
          <span
            class="css-1yyf9zi"
            data-paste-element="TEXT"
          >
            <audio
              controls=""
              data-testid="voicemailRecording"
              src="https://api.twilio.com/2010-04-01/Accounts/ACf688a0f5957274af34831c0b5e0cdbaa/Recordings/RE13186709605f710e008c1fe04541f469"
            />
          </span>
        </div>
        <div
          class="css-roynbj"
          data-paste-element="C_AND_V_CONTENT_BOX"
        >
          <h4
            class="css-yiv179"
            data-paste-element="C_AND_V_CONTENT_HEADING"
          >
            Voicemail transcript
          </h4>
          <span
            class="css-1yyf9zi"
            data-paste-element="TEXT"
          >
            Test transcription text
          </span>
        </div>
        <div
          class="css-roynbj"
          data-paste-element="C_AND_V_CONTENT_BOX"
        >
          <h4
            class="css-yiv179"
            data-paste-element="C_AND_V_CONTENT_HEADING"
          >
            Contact phone
          </h4>
          <span
            class="css-1yyf9zi"
            data-paste-element="TEXT"
          >
            111
          </span>
        </div>
        <div
          class="css-roynbj"
          data-paste-element="C_AND_V_CONTENT_BOX"
        >
          <h4
            class="css-yiv179"
            data-paste-element="C_AND_V_CONTENT_HEADING"
          >
            Call reception time
          </h4>
          <div
            class="css-4mhva7"
            data-paste-element="FLEX"
          >
            <div
              class="css-1cmiaub"
              data-paste-element="FLEX"
            >
              <div
                class="css-roynbj"
                data-paste-element="BOX"
              >
                1/22/2023, 7:06:18 AM UTC
              </div>
            </div>
            <div
              class="css-j3kwsk"
              data-paste-element="FLEX"
            >
              <div
                class="css-hp8bo2"
                data-paste-element="BOX"
              >
                <span
                  class="css-144s81u"
                  data-paste-element="ICON"
                >
                  <svg
                    aria-hidden="false"
                    aria-labelledby="InformationIcon-2"
                    height="100%"
                    role="img"
                    viewBox="0 0 20 20"
                    width="100%"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <title
                      id="InformationIcon-2"
                    >
                      System time: 1/22/2023, 7:06:18 AM UTC
                    </title>
                    <path
                      d="M10 2a8 8 0 110 16 8 8 0 010-16zm0 1.25a6.75 6.75 0 100 13.5 6.75 6.75 0 000-13.5zM10 9a1 1 0 011 1v3a1 1 0 01-2 0v-3a1 1 0 011-1zm0-3a1 1 0 110 2 1 1 0 010-2z"
                      fill="currentColor"
                      fill-rule="evenodd"
                    />
                  </svg>
                </span>
              </div>
            </div>
          </div>
        </div>
        <div
          class="css-roynbj"
          data-paste-element="C_AND_V_CONTENT_BOX"
        >
          <h4
            class="css-yiv179"
            data-paste-element="C_AND_V_CONTENT_HEADING"
          >
            Callback attempt
          </h4>
          <span
            class="css-1yyf9zi"
            data-paste-element="TEXT"
          >
            1
             of 
            3
          </span>
        </div>
      </div>
      <div
        class="css-roynbj"
        data-paste-element="C_AND_V_BUTTON_BOX"
      >
        <button
          aria-busy="false"
          class="css-1dx7s8z"
          data-paste-element="BUTTON"
          data-testid="callbackBtn"
          type="button"
        >
          <span
            class="css-z6jp9v"
            data-paste-element="BOX"
          >
            Place Call Now To 
            111
          </span>
        </button>
      </div>
      <div
        class="css-roynbj"
        data-paste-element="C_AND_V_BUTTON_BOX"
      >
        <button
          aria-busy="false"
          class="css-1wochzm"
          data-paste-element="BUTTON"
          data-testid="retryBtn"
          type="button"
        >
          <span
            class="css-z6jp9v"
            data-paste-element="BOX"
          >
            Retry Later
          </span>
        </button>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="css-1i2bp42"
      data-paste-element="FLEX"
    >
      <div
        class="css-roynbj"
        data-paste-element="C_AND_V_CONTENT_BOX"
      >
        <h4
          class="css-yiv179"
          data-paste-element="C_AND_V_CONTENT_HEADING"
        >
          Contact Voicemail
        </h4>
        <span
          class="css-1yyf9zi"
          data-paste-element="TEXT"
        >
          A contact has left a voicemail that requires attention.
        </span>
      </div>
      <div
        class="css-roynbj"
        data-paste-element="C_AND_V_CONTENT_BOX"
      >
        <h4
          class="css-yiv179"
          data-paste-element="C_AND_V_CONTENT_HEADING"
        >
          Voicemail recording
        </h4>
        <span
          class="css-1yyf9zi"
          data-paste-element="TEXT"
        >
          <audio
            controls=""
            data-testid="voicemailRecording"
            src="https://api.twilio.com/2010-04-01/Accounts/ACf688a0f5957274af34831c0b5e0cdbaa/Recordings/RE13186709605f710e008c1fe04541f469"
          />
        </span>
      </div>
      <div
        class="css-roynbj"
        data-paste-element="C_AND_V_CONTENT_BOX"
      >
        <h4
          class="css-yiv179"
          data-paste-element="C_AND_V_CONTENT_HEADING"
        >
          Voicemail transcript
        </h4>
        <span
          class="css-1yyf9zi"
          data-paste-element="TEXT"
        >
          Test transcription text
        </span>
      </div>
      <div
        class="css-roynbj"
        data-paste-element="C_AND_V_CONTENT_BOX"
      >
        <h4
          class="css-yiv179"
          data-paste-element="C_AND_V_CONTENT_HEADING"
        >
          Contact phone
        </h4>
        <span
          class="css-1yyf9zi"
          data-paste-element="TEXT"
        >
          111
        </span>
      </div>
      <div
        class="css-roynbj"
        data-paste-element="C_AND_V_CONTENT_BOX"
      >
        <h4
          class="css-yiv179"
          data-paste-element="C_AND_V_CONTENT_HEADING"
        >
          Call reception time
        </h4>
        <div
          class="css-4mhva7"
          data-paste-element="FLEX"
        >
          <div
            class="css-1cmiaub"
            data-paste-element="FLEX"
          >
            <div
              class="css-roynbj"
              data-paste-element="BOX"
            >
              1/22/2023, 7:06:18 AM UTC
            </div>
          </div>
          <div
            class="css-j3kwsk"
            data-paste-element="FLEX"
          >
            <div
              class="css-hp8bo2"
              data-paste-element="BOX"
            >
              <span
                class="css-144s81u"
                data-paste-element="ICON"
              >
                <svg
                  aria-hidden="false"
                  aria-labelledby="InformationIcon-2"
                  height="100%"
                  role="img"
                  viewBox="0 0 20 20"
                  width="100%"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <title
                    id="InformationIcon-2"
                  >
                    System time: 1/22/2023, 7:06:18 AM UTC
                  </title>
                  <path
                    d="M10 2a8 8 0 110 16 8 8 0 010-16zm0 1.25a6.75 6.75 0 100 13.5 6.75 6.75 0 000-13.5zM10 9a1 1 0 011 1v3a1 1 0 01-2 0v-3a1 1 0 011-1zm0-3a1 1 0 110 2 1 1 0 010-2z"
                    fill="currentColor"
                    fill-rule="evenodd"
                  />
                </svg>
              </span>
            </div>
          </div>
        </div>
      </div>
      <div
        class="css-roynbj"
        data-paste-element="C_AND_V_CONTENT_BOX"
      >
        <h4
          class="css-yiv179"
          data-paste-element="C_AND_V_CONTENT_HEADING"
        >
          Callback attempt
        </h4>
        <span
          class="css-1yyf9zi"
          data-paste-element="TEXT"
        >
          1
           of 
          3
        </span>
      </div>
    </div>
    <div
      class="css-roynbj"
      data-paste-element="C_AND_V_BUTTON_BOX"
    >
      <button
        aria-busy="false"
        class="css-1dx7s8z"
        data-paste-element="BUTTON"
        data-testid="callbackBtn"
        type="button"
      >
        <span
          class="css-z6jp9v"
          data-paste-element="BOX"
        >
          Place Call Now To 
          111
        </span>
      </button>
    </div>
    <div
      class="css-roynbj"
      data-paste-element="C_AND_V_BUTTON_BOX"
    >
      <button
        aria-busy="false"
        class="css-1wochzm"
        data-paste-element="BUTTON"
        data-testid="retryBtn"
        type="button"
      >
        <span
          class="css-z6jp9v"
          data-paste-element="BOX"
        >
          Retry Later
        </span>
      </button>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Callback and Voicemail plugin should render correct snapshot for voicemail 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <style>
      
    table.disable-selection {
      -webkit-touch-callout: none;
      -webkit-user-select: none; 
      -khtml-user-select: none; 
      -moz-user-select: none; 
      -ms-user-select: none; 
      user-select: none;
    }
  
    .disable-selection span::selection{
      background-color: transparent;
    }
    .disable-selection br::selection{
      background-color: transparent;
    }
  
    </style>
    <div>
      <div
        class="css-1i2bp42"
        data-paste-element="FLEX"
      >
        <div
          class="css-roynbj"
          data-paste-element="C_AND_V_CONTENT_BOX"
        >
          <h4
            class="css-yiv179"
            data-paste-element="C_AND_V_CONTENT_HEADING"
          >
            Contact Voicemail
          </h4>
          <span
            class="css-1yyf9zi"
            data-paste-element="TEXT"
          >
            A contact has left a voicemail that requires attention.
          </span>
        </div>
        <div
          class="css-roynbj"
          data-paste-element="C_AND_V_CONTENT_BOX"
        >
          <h4
            class="css-yiv179"
            data-paste-element="C_AND_V_CONTENT_HEADING"
          >
            Voicemail recording
          </h4>
          <span
            class="css-1yyf9zi"
            data-paste-element="TEXT"
          >
            <audio
              controls=""
              data-testid="voicemailRecording"
              src="https://api.twilio.com/2010-04-01/Accounts/ACf688a0f5957274af34831c0b5e0cdbaa/Recordings/RE13186709605f710e008c1fe04541f469"
            />
          </span>
        </div>
        <div
          class="css-roynbj"
          data-paste-element="C_AND_V_CONTENT_BOX"
        >
          <h4
            class="css-yiv179"
            data-paste-element="C_AND_V_CONTENT_HEADING"
          >
            Contact phone
          </h4>
          <span
            class="css-1yyf9zi"
            data-paste-element="TEXT"
          >
            111
          </span>
        </div>
        <div
          class="css-roynbj"
          data-paste-element="C_AND_V_CONTENT_BOX"
        >
          <h4
            class="css-yiv179"
            data-paste-element="C_AND_V_CONTENT_HEADING"
          >
            Call reception time
          </h4>
          <div
            class="css-4mhva7"
            data-paste-element="FLEX"
          >
            <div
              class="css-1cmiaub"
              data-paste-element="FLEX"
            >
              <div
                class="css-roynbj"
                data-paste-element="BOX"
              >
                1/22/2023, 7:06:18 AM UTC
              </div>
            </div>
            <div
              class="css-j3kwsk"
              data-paste-element="FLEX"
            >
              <div
                class="css-hp8bo2"
                data-paste-element="BOX"
              >
                <span
                  class="css-144s81u"
                  data-paste-element="ICON"
                >
                  <svg
                    aria-hidden="false"
                    aria-labelledby="InformationIcon-1"
                    height="100%"
                    role="img"
                    viewBox="0 0 20 20"
                    width="100%"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <title
                      id="InformationIcon-1"
                    >
                      System time: 1/22/2023, 7:06:18 AM UTC
                    </title>
                    <path
                      d="M10 2a8 8 0 110 16 8 8 0 010-16zm0 1.25a6.75 6.75 0 100 13.5 6.75 6.75 0 000-13.5zM10 9a1 1 0 011 1v3a1 1 0 01-2 0v-3a1 1 0 011-1zm0-3a1 1 0 110 2 1 1 0 010-2z"
                      fill="currentColor"
                      fill-rule="evenodd"
                    />
                  </svg>
                </span>
              </div>
            </div>
          </div>
        </div>
        <div
          class="css-roynbj"
          data-paste-element="C_AND_V_CONTENT_BOX"
        >
          <h4
            class="css-yiv179"
            data-paste-element="C_AND_V_CONTENT_HEADING"
          >
            Callback attempt
          </h4>
          <span
            class="css-1yyf9zi"
            data-paste-element="TEXT"
          >
            1
             of 
            3
          </span>
        </div>
      </div>
      <div
        class="css-roynbj"
        data-paste-element="C_AND_V_BUTTON_BOX"
      >
        <button
          aria-busy="false"
          class="css-1dx7s8z"
          data-paste-element="BUTTON"
          data-testid="callbackBtn"
          type="button"
        >
          <span
            class="css-z6jp9v"
            data-paste-element="BOX"
          >
            Place Call Now To 
            111
          </span>
        </button>
      </div>
      <div
        class="css-roynbj"
        data-paste-element="C_AND_V_BUTTON_BOX"
      >
        <button
          aria-busy="false"
          class="css-1wochzm"
          data-paste-element="BUTTON"
          data-testid="retryBtn"
          type="button"
        >
          <span
            class="css-z6jp9v"
            data-paste-element="BOX"
          >
            Retry Later
          </span>
        </button>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="css-1i2bp42"
      data-paste-element="FLEX"
    >
      <div
        class="css-roynbj"
        data-paste-element="C_AND_V_CONTENT_BOX"
      >
        <h4
          class="css-yiv179"
          data-paste-element="C_AND_V_CONTENT_HEADING"
        >
          Contact Voicemail
        </h4>
        <span
          class="css-1yyf9zi"
          data-paste-element="TEXT"
        >
          A contact has left a voicemail that requires attention.
        </span>
      </div>
      <div
        class="css-roynbj"
        data-paste-element="C_AND_V_CONTENT_BOX"
      >
        <h4
          class="css-yiv179"
          data-paste-element="C_AND_V_CONTENT_HEADING"
        >
          Voicemail recording
        </h4>
        <span
          class="css-1yyf9zi"
          data-paste-element="TEXT"
        >
          <audio
            controls=""
            data-testid="voicemailRecording"
            src="https://api.twilio.com/2010-04-01/Accounts/ACf688a0f5957274af34831c0b5e0cdbaa/Recordings/RE13186709605f710e008c1fe04541f469"
          />
        </span>
      </div>
      <div
        class="css-roynbj"
        data-paste-element="C_AND_V_CONTENT_BOX"
      >
        <h4
          class="css-yiv179"
          data-paste-element="C_AND_V_CONTENT_HEADING"
        >
          Contact phone
        </h4>
        <span
          class="css-1yyf9zi"
          data-paste-element="TEXT"
        >
          111
        </span>
      </div>
      <div
        class="css-roynbj"
        data-paste-element="C_AND_V_CONTENT_BOX"
      >
        <h4
          class="css-yiv179"
          data-paste-element="C_AND_V_CONTENT_HEADING"
        >
          Call reception time
        </h4>
        <div
          class="css-4mhva7"
          data-paste-element="FLEX"
        >
          <div
            class="css-1cmiaub"
            data-paste-element="FLEX"
          >
            <div
              class="css-roynbj"
              data-paste-element="BOX"
            >
              1/22/2023, 7:06:18 AM UTC
            </div>
          </div>
          <div
            class="css-j3kwsk"
            data-paste-element="FLEX"
          >
            <div
              class="css-hp8bo2"
              data-paste-element="BOX"
            >
              <span
                class="css-144s81u"
                data-paste-element="ICON"
              >
                <svg
                  aria-hidden="false"
                  aria-labelledby="InformationIcon-1"
                  height="100%"
                  role="img"
                  viewBox="0 0 20 20"
                  width="100%"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <title
                    id="InformationIcon-1"
                  >
                    System time: 1/22/2023, 7:06:18 AM UTC
                  </title>
                  <path
                    d="M10 2a8 8 0 110 16 8 8 0 010-16zm0 1.25a6.75 6.75 0 100 13.5 6.75 6.75 0 000-13.5zM10 9a1 1 0 011 1v3a1 1 0 01-2 0v-3a1 1 0 011-1zm0-3a1 1 0 110 2 1 1 0 010-2z"
                    fill="currentColor"
                    fill-rule="evenodd"
                  />
                </svg>
              </span>
            </div>
          </div>
        </div>
      </div>
      <div
        class="css-roynbj"
        data-paste-element="C_AND_V_CONTENT_BOX"
      >
        <h4
          class="css-yiv179"
          data-paste-element="C_AND_V_CONTENT_HEADING"
        >
          Callback attempt
        </h4>
        <span
          class="css-1yyf9zi"
          data-paste-element="TEXT"
        >
          1
           of 
          3
        </span>
      </div>
    </div>
    <div
      class="css-roynbj"
      data-paste-element="C_AND_V_BUTTON_BOX"
    >
      <button
        aria-busy="false"
        class="css-1dx7s8z"
        data-paste-element="BUTTON"
        data-testid="callbackBtn"
        type="button"
      >
        <span
          class="css-z6jp9v"
          data-paste-element="BOX"
        >
          Place Call Now To 
          111
        </span>
      </button>
    </div>
    <div
      class="css-roynbj"
      data-paste-element="C_AND_V_BUTTON_BOX"
    >
      <button
        aria-busy="false"
        class="css-1wochzm"
        data-paste-element="BUTTON"
        data-testid="retryBtn"
        type="button"
      >
        <span
          class="css-z6jp9v"
          data-paste-element="BOX"
        >
          Retry Later
        </span>
      </button>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
